# route-warden

./: .gitignore  Cargo.toml  README.md
deploy/macos/: com.yanxi.route-warden.plist
docs/: runbook.md  verify-clash-verge-node.md
docs/plans/: 2026-03-06-route-warden-design.md  2026-03-06-route-warden-implementation-plan.md  2026-03-10-single-probe-multi-group-design.md  2026-03-10-single-probe-multi-group-implementation-plan.md  2026-03-14-readme-positioning-design.md  2026-03-14-readme-positioning-implementation-plan.md
examples/: config.example.yaml
fixtures/: config.invalid.yaml  config.valid.yaml
migrations/: 0001_init.sql  0002_switch_events_score_gap.sql
src/: app.rs  clash_verge.rs  cli.rs  lib.rs  main.rs
src/config/: mod.rs  types.rs
src/controller/: client.rs  mod.rs
src/probe/: http_probe.rs  mod.rs
src/runner/: loop.rs  mod.rs
src/score/: mod.rs  scorer.rs
src/select/: decision.rs  mod.rs
src/store/: mod.rs  sqlite.rs
tests/: clash_verge_rw_groups.rs  cli_modes.rs  config_load.rs  controller_client.rs  probe_status_rules.rs  runner_tick.rs  scorer_rank.rs  selector_stability.rs  smoke_startup.rs  store_sqlite.rs
